--- a/.gitignore
+++ b/.gitignore
@@ -2,17 +2,17 @@
 #
 # Get latest from https://github.com/github/gitignore/blob/master/Unity.gitignore
 #
-/[Ll]ibrary/
+/kenneyjam/[Ll]ibrary/
 /kenneyjam/[Tt]emp/
-/[Oo]bj/
-/[Bb]uild/
-/[Bb]uilds/
-/[Ll]ogs/
-/[Uu]ser[Ss]ettings/
+/kenneyjam/[Oo]bj/
+/kenneyjam/[Bb]uild/
+/kenneyjam/[Bb]uilds/
+/kenneyjam/[Ll]ogs/
+/kenneyjam/[Uu]ser[Ss]ettings/
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
-/[Mm]emoryCaptures/
+/kenneyjam/[Mm]emoryCaptures/
 
 # Asset meta data should only be ignored when the corresponding asset is also ignored
 !/[Aa]ssets/**/*.meta
